syntax = "proto3";

option java_package = "org.rudtyz.grpcserver.dto";
option java_multiple_files = true;
option go_package = ".;main";
package helloworld;
import "google/protobuf/empty.proto";
// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc GetSample (google.protobuf.Empty) returns (SampleReply) {}
  rpc AsyncThrowException (google.protobuf.Empty) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message SampleReply {
    string name = 1;
    int32 number = 2;
}